Bump version to flyway-10.17.0
Please see the GH release for the release notes

Azure Identity is now a dependency of Flyway for SQL Server Active Directory MSI authentication

Update driver details for the plugin and YBDB verified versions